fixed overflowing images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,12 @@ body {
 .content {
     background-color: white;
     height:400px;
+    position: relative;
+}
+
+#img-div {
+    position: relative;
+    height: 350px;
 }
 
 #mystery-word {
@@ -26,6 +32,8 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-height: 100%;
+    width: auto;
 }
 
 #letters-guessed {
